# flake_test

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
flake_test/: __init__.py  cicd.py
